Version 0.16
============

Released ?????? ??, ????

- Financial market support review, new method financial_holidays(..) #694 (dr-p)
- Support for Moldova #695 (Thedand)
- Support for Bolivia #679, #698 (kasya)
- UK updates #702 (JPunter)
- Australia updates #699 (Ryan-McCrory)
- NYSE updates #693, #696 (kasya)

Version 0.15
============

Released August 21, 2022

- Added support for Python3.11 (dr-p)
- Updated README - improved badges area (dr-p)
- Support for Cuba #678 (bthompson, dr-p)
- Typechecking implementation, first release (HolidayBase, utils, some sample countries) #661 (dimbleby)
- Test coverage improvement #633 (akosfurton, dr-p)
- Drop support for UK subdivisions as countries (England, Scotland..) (dr-p)
- Drop support for IsleOfMan as UK subdivision (dr-p)
- Drop support for PortugalExt (ie: extended Portugal) (dr-p)
- US fixes #675 (arkid15r)
- Colombia fixes & test improvements #676 (bkthomps)
- Venezuela fixes & test improvements #677 (bkthomps)
- Canada fixes #579 (dr-p, scubaandre)
- Ukraine refactoring #681 (kasya)
- Italy update #689 (g-gg, dr-p)
- Bump pre-commit and setup-python actions #672, #682, #686, #688 (dr-p)
- Doc example fix #685 (steakhutzeee, dr-p)


Version 0.14.2
==============

Released June 5, 2022

- Drop support for EOL Python 3.6 #328 (hugovk, dr-p)
- Package review #662 (dimbleby)
- Added financial markets support: ECB and NYSE, list_supported_financial() method (dr-p)
- Support for NY Stock Exchange #651, #458 (nadime, dr-p)
- Support for Malta #612, #630 (rafelbev)
- Support for Madagascar #656 (fav007)
- Support for Cyprus #410, #665 (digidestination, avnigo)
- Ireland as standalone country #636, #639 (TeoTN, dr-p, javicalle)
- Australia fixes #631 (jeremychrimes)
- Singapore updates #652 (mborsetti)
- Saudi Arabia fixes #642 (OsaydAbdu)
- Spain fixes #634 (javicalle)
- US fixes #648 (dashdrum)
- Greece fixes #659 (tudorvaran)
- India doc fixes #657 (dr-p)
- Poland fix #663 (kfsz)


Version 0.13
============
