@@ -8,6 +8,7 @@ Released ?????? ??, ????
 - Support for Bolivia #679, #698 (kasya)
 - UK updates #702 (JPunter)
 - Australia updates #699 (Ryan-McCrory)
+- Canada updates #710 (bkthomps)
 - NYSE updates #693, #696 (kasya)
 
 Version 0.15
